2008-07-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/IProperty.cs,
	  MonoDevelop.Projects.Dom/DomMethod.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom/AbstractMember.cs,
	  MonoDevelop.Projects.Dom/Namespace.cs,
	  MonoDevelop.Projects.Dom/IMember.cs,
	  MonoDevelop.Projects.Dom/DomEvent.cs,
	  MonoDevelop.Projects.Dom/DomField.cs,
	  MonoDevelop.Projects.Dom/DomProperty.cs: Added help support for new
	  dom.

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/IParserContext.cs,
	  MonoDevelop.Projects.Dom/IType.cs,
	  MonoDevelop.Projects.Dom/ExpressionContext.cs,
	  MonoDevelop.Projects.Dom/ProjectCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/DefaultParserContext.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs: Worked on new
	  dom. 

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Fixed referenced
	  projects bug in new dom.

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs: Optimized
	  cecil loading.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Added parserdatabase
	  update thread.

2008-07-14  Mike Krüger <mkrueger@novell.com> 
